--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @import "flatpickr/dist/flatpickr.min.css";
+@import "tom-select/dist/css/tom-select.default.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
